# whatsapp-mcp

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  Dockerfile.smithery  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SMITHERY_COMPLETE_GUIDE.md  SMITHERY_DEPLOYMENT.md  claude_desktop_config.json  mock_bridge.py  pyproject.toml  requirements.txt  smithery-full.yaml  smithery.yaml  start-container.sh  start-services.sh  start-whatsapp-mcp.sh  start.sh  supervisord.conf  test_all_tools.py  test_final_qr.py  test_mcp.py  test_mcp_proper.py  test_mcp_qr.py  test_real_bridge.py  test_setup.py  test_simple.sh  test_tools.py  whatsapp_mcp.py
whatsapp-bridge/: qr_handler.go
whatsapp-mcp-server/: main.py  main_smithery.py  whatsapp.py  whatsapp_full.py  whatsapp_real.py
